fix horizontal scroll

--- a/src/Footer.module.css
+++ b/src/Footer.module.css
@@ -1,8 +1,7 @@
 footer {
     position: absolute;
     bottom: 0;
-    height: 40px;
-    width: 100%;    
+    height: 40px;   
     font-weight: 200;
     font-size: 14px;
     left: 45%;
